# json_memoize

./: .gitignore  LICENSE  json_memoize.py  pyproject.toml  readme.md  setup.cfg  test_json_memoize.py
src/: __init__.py  json_memoize.py
src/json_memoize/: __init__.py  json_memoize.py
tests/: test_json_memoize.py
