[metadata]
name = json_memoize-phildavis17
version = 1.0.0
author = Phil Davis
author_email = phildavis17@gmail.com
description = A tool for light-duty persistent memoization
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/phildavis17/json_memoize
project_urls = 
    Bug Tracker = https://github.com/phildavis17/json_memoize/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = srd
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src